--- a/config.yml
+++ b/config.yml
@@ -1,2 +1,4 @@
-BASE_MODEL_PATH: "CompVis/stable-diffusion-v1-4"
-LORA_MODEL_PATH: "sayakpaul/sd-model-finetuned-lora-t4"
+DATASET_PATH: "data/Anor_Londo"
+MODEL_PATH: "runwayml/stable-diffusion-v1-5"
+TRAINING_FOLDER_NAME: "experiments"
+RESULTS_PATH: "results"
